updated confid now time to work!

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = DEFAULT AGENT
+USERAGENT = IR UW21 88035977
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
