--- a/config.ini
+++ b/config.ini
@@ -7,8 +7,9 @@ HOST = styx.ics.uci.edu
 PORT = 9000
 
 [CRAWLER]
-SEEDURL = https://www.ics.uci.edu
-#,https://www.cs.uci.edu,https://www.informatics.uci.edu,https://www.stat.uci.edu
+SEEDURL = https://www.ics.uci.edu,https://www.cs.uci.edu,https://www.informatics.uci.edu,https://www.stat.uci.edu
+# http://www.informatics.uci.edu/files/pdf/InformaticsBrochure-March2018
+
 # In seconds
 POLITENESS = 0.5
 
